# ST-DeepHydro

./: README.md  environment.yml  requirements.txt  run_training.py  setup.cfg
config/: basins.txt  cnn-lstm-training-config.yml  conv3d-training-config.yml  convlstm-training-config.yml  logging.yml  lstm-training-config.yml  multi-cnn-lstm-training-config.yml
libs/: config.py  dataloader.py  dataset.py  evaluation.py  generator.py  ioutils.py  models.py  monitoring.py  plotutils.py  processing.py  training.py
stdeephydro/: common.py  config.py  dataloader.py  evaluation.py  generator.py  ioutils.py  models.py  monitoring.py  plotutils.py  processing.py  run_training.py  training.py  utils.py
test/: test_config.py  test_dataset.py  test_processing.py  test_timeseries_generator.py
test/data/: test-config.yml
