[metadata]
name = stdeephydro
version = 0.1.0
url = https://github.com/SebaDro/st-deep-hydro
author = Sebastian Drost
author_email=sebastian.drost@hs-bochum.de
description = Python library for spatio-temporal aware hydrological modelling using deep learning.
long_description = file: README.md
keywords = hydrology, deep learning, spatio-temporal modelling
license = Apache-2.0 license
classifiers =
    Programming Language :: Python :: 3

[options]
packages =
    stdeephydro
python_requires = >=3.7
install_requires =
    dask
    h5netcdf
    matplotlib
    numpy
    pandas
    PyYAML
    tensorflow
    xarray
    zarr

[options.entry_points]
    console_scripts =
        run_training = stdeephydro.run_training:main